Fixed an infinite loop in the custom drawing code that was wasting pointless CPU cycles. Added a list view and buttons to manipulate list view. Will finish coding signal logic for buttons on next commit.

--- a/gtkregextester.ui
+++ b/gtkregextester.ui
@@ -3,29 +3,81 @@
         <property name="default-width">800</property>
         <property name="default-height">600</property>
         <property name="visible">True</property>
+        <property name="title">GTK Regex Tester</property>
         <child>
             <object class="GtkGrid" id="grid">
             <property name="visible">True</property>
+            <property name="row_homogeneous">True</property>
+            <property name="column_homogeneous">True</property>
                 <child>
-                    <object class="GtkTreeView" id="tree_view">
-                        <property name="visible">False</property>
-                        <property name="hexpand">True</property>
-                        <property name="vexpand">True</property>
-                        <property name="model">list_store</property>
-                        <property name="can-focus">False</property>
+                    <object class="GtkScrolledWindow">
+                        <property name="visible">True</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">5</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
                         <child>
-                            <object class="GtkTreeViewColumn" id="column1">
+                            <object class="GtkTreeView" id="tree_view">
+                                <property name="visible">True</property>
+                                <property name="hexpand">True</property>
+                                <property name="vexpand">True</property>
+                                <property name="model">list_store</property>
+                                <property name="can-focus">True</property>
                                 <child>
-                                    <object class="GtkCellRendererText" id="cell1"/>
-                                    <attributes>
-                                        <attribute name="text">0</attribute>
-                                    </attributes>
+                                    <object class="GtkTreeViewColumn" id="column1">
+                                        <child>
+                                            <object class="GtkCellRendererText" id="cell1">
+                                                <property name="xpad">10</property>
+                                            </object>
+                                            <attributes>
+                                                <attribute name="text">0</attribute>
+                                            </attributes>
+                                        </child>
+                                    </object>
                                 </child>
                             </object>
                         </child>
                     </object>
                     <packing>
                         <property name="left-attach">0</property>
+                        <property name="top-attach">0</property>
+                        <property name="width">5</property>
+                        <property name="height">1</property>
+                    </packing>
+                </child>
+                <child>
+                    <object class="GtkBox" id="button_box">
+                        <property name="visible">True</property>
+                        <property name="hexpand">True</property>
+                        <property name="vexpand">True</property>
+                        <property name="orientation">vertical</property>
+                        <property name="valign">center</property>
+                        <property name="spacing">5</property>
+                        <property name="margin-start">5</property>
+                        <property name="margin-end">10</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
+                        <child>
+                            <object class="GtkButton" id="button_save">
+                                <property name="visible">True</property>
+                                <property name="label">Save as...</property>
+                            </object>
+                        </child>
+                        <child>
+                            <object class="GtkButton" id="button_pop">
+                                <property name="visible">True</property>
+                                <property name="label">Pop</property>
+                            </object>
+                        </child>
+                        <child>
+                            <object class="GtkButton" id="button_push">
+                                <property name="visible">True</property>
+                                <property name="label">Push</property>
+                            </object>
+                        </child>
+                    </object>
+                    <packing>
+                        <property name="left-attach">5</property>
                         <property name="top-attach">0</property>
                         <property name="width">1</property>
                         <property name="height">1</property>
@@ -36,6 +88,8 @@
                     <object class="GtkBox" id="box1">
                         <property name="visible">True</property>
                         <property name="orientation">vertical</property>
+                        <property name="hexpand">True</property>
+                        <property name="vexpand">True</property>
                         <property name="homogeneous">True</property>
                         <child>
                             <object class="GtkScrolledWindow" id="top_window">
@@ -92,7 +146,7 @@
                     <packing>
                         <property name="left-attach">0</property>
                         <property name="top-attach">1</property>
-                        <property name="width">1</property>
+                        <property name="width">6</property>
                         <property name="height">3</property>
                     </packing>
                 </child>
