--- a/gtkregextester.ui
+++ b/gtkregextester.ui
@@ -61,18 +61,22 @@
                             <object class="GtkButton" id="button_save">
                                 <property name="visible">True</property>
                                 <property name="label">Save as...</property>
+                                <property name="can-focus">False</property>
                             </object>
                         </child>
                         <child>
                             <object class="GtkButton" id="button_pop">
                                 <property name="visible">True</property>
+                                <property name="sensitive">False</property>
                                 <property name="label">Pop</property>
+                                <property name="can-focus">False</property>
                             </object>
                         </child>
                         <child>
                             <object class="GtkButton" id="button_push">
                                 <property name="visible">True</property>
                                 <property name="label">Push</property>
+                                <property name="can-focus">False</property>
                             </object>
                         </child>
                     </object>
